unpackaged/main/default/objects/traa_Opportunity_Enrollment_Record_Types__mdt/traa_Opportunity_Enrollment_Record_Types__mdt.object-meta.xml
<CustomObject>
    <description>This metadata table would hold data to identify Opportunity Record Types that fall under the Enrollment Process</description>
    <label>Opportunity Enrollment Record Type</label>
    <pluralLabel>Opportunity Enrollment Record Types</pluralLabel>
</CustomObject>