unpackaged/main/default/objects/traa_Opportunity_Enrollment_Record_Types__mdt/fields/traa_Is_Enrollment_Type__c.field-meta.xml
<CustomField>
    <fullName>traa_Is_Enrollment_Type__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox would identify if Opportunity is an Enrollment type</description>
    <label>Is Enrollment Type</label>
    <type>Checkbox</type>
</CustomField>