unpackaged/main/default/objects/traa_Opportunity_Enrollment_Record_Types__mdt/fields/traa_RecordType_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>traa_RecordType_Developer_Name__c</fullName>
    <description>This will hold Record Type&#39;s Developer Name</description>
    <inlineHelpText>This will hold Record Type&#39;s Developer Name</inlineHelpText>
    <label>RecordType Developer Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>