unpackaged/main/default/objects/traa_Opportunity_Enrollment_Record_Types__mdt/fields/traa_RecordType_Name__c.field-meta.xml
<CustomField>
    <fullName>traa_RecordType_Name__c</fullName>
    <description>This will hold Record Type&#39;s Name</description>
    <inlineHelpText>This will hold Record Type&#39;s Name</inlineHelpText>
    <label>RecordType Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>